--- a/style.css
+++ b/style.css
@@ -1,12 +1,70 @@
 body {
   box-sizing: border-box;
-  font-family: Roboto;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+header,
+.section.one {
+  background-color: #1f2937;
+}
+
+#header-cont {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  margin: 0 auto;
+}
+
+header ul {
+  padding: 0;
+}
+
+header li {
+  display: inline;
+  margin-left: 20px;
+}
+
+header li a {
+  color: rgba(255, 255, 255, 0.8);
+  text-decoration: none;
 }
 
 #hero {
   font-size: 48px;
   color: #f9faf8;
   font-weight: 900;
+  margin: 0 0 10px 0;
+  line-height: 1;
+}
+
+.section.one {
+  padding: 70px 0;
+}
+
+.section.one div {
+  display: flex;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.section.one div div {
+  flex-direction: column;
+}
+
+p {
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.8);
+  margin: 0 0 10px 0;
+}
+
+#img-placeholder {
+  background-color: grey;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #hero,
@@ -23,10 +81,22 @@ nav li {
 #logo {
   font-size: 24px;
   color: #f9faf8;
+  font-weight: bold;
 }
 
-#cta-btn {
+.cta-btn,
+.hero-btn {
   background-color: #3882f6;
+  width: 120px;
+  border-radius: 8px;
+  padding: 10px;
+  color: #e5e7eb;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.hero-btn {
+  border: none;
 }
 
 #info-header {
@@ -35,7 +105,7 @@ nav li {
   font-weight: 900;
 }
 
-#quote-section {
+.section.three {
   background-color: #e5e7eb;
 }
 
